<resources>
    <string name="app_name">Colegio Don Bosco</string>
    <string name="login">¿Ya tienes cuenta?</string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="auth">Autenticar</string>
    <string name="create">¿No tienes cuenta?</string>
    <string name="txtRegister">Regístrate</string>
    <string name="name">Colegio Don Bosco</string>
    <string name="sing_out">Cerrar sesión</string>
    <string name="agregarNombre">Nombre</string>
    <string name="agregarApellido">Apellido</string>
    <string name="agregarNota">Nota</string>
    <string name="agregarGrado">Grado</string>
    <string name="agregarMateria">Materia</string>
    <string name="agregarGuardar">Agregar Estudiante</string>
    <string name="editarNombre">Nombre</string>
    <string name="editarApellido">Apellido</string>
    <string name="editarNota">Nota</string>
    <string name="editarGrado">Grado</string>
    <string name="editarMateria">Materia</string>
    <string name="editarGuardar">Editar Estudiante</string>
    <string name="mainAgregar">Agregar estudiante</string>
    <string name="mainListar">Lista de estudiantes</string>
    <string name="itemNombre">Nombre: </string>
    <string name="itemNota">Nota: </string>
    <string name="itemGrado">Grado: </string>
    <string name="itemMateria">Materia: </string>
    <string name="itemEliminar">Eliminar </string>
    <string name="itemEditar">Editar </string>
    <string name="filtrar">Filtrar </string>
    <string name="agregarEstudiante">Agregar Estudiante </string>
    <string name="editarEstudiante">Editar Estudiante </string>
    <string name="Acciones">Tus acciones:</string>
</resources>