<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@android:color/white"
    android:elevation="2dp">

    <TextView
        android:id="@+id/txtItemNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemNombre"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtItemMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemMateria"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtItemGrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemGrado"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtItemNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemNota"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_dark" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemEditar"
        android:visibility="visible"/>

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemEliminar"
        android:visibility="visible"/>

</LinearLayout>
